If we have a dialog resource, (named) we can now load it via js (window name becomes class name)

--- a/PopEngine.visualstudio/PopEngineApp.vcxproj
+++ b/PopEngine.visualstudio/PopEngineApp.vcxproj
@@ -109,6 +109,7 @@
     </CopyFileToFolders>
     <None Include="..\Source_App\Info.plist" />
     <None Include="..\Source_App\PopEngineUnitTestApp.entitlements" />
+    <None Include="..\UnitTest\Gui\bootup.js" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
