Temporarily turning off nvidia & osmesa builds in workflow

--- a/.github/workflows/Build_Linux.yml
+++ b/.github/workflows/Build_Linux.yml
@@ -20,14 +20,16 @@ jobs:
             type: linux
             arch: x86_64
             
-          - os: ubuntu-18.04
-            type: linux
-            arch: x86_64
-            flag: osmesa
+          # gr: osmesa build missing egl symbols when linking test app... eglCreateContext temporarily disabling
+          #- os: ubuntu-18.04
+          #  type: linux
+          #  arch: x86_64
+          #  flag: osmesa
 
-          - os: Nvidia
-            type: linux
-            arch: arm64
+          # gr: temporarily disabling to get a linux build going
+          #- os: Nvidia
+          #  type: linux
+          #  arch: arm64
 
           # - os: Pi4
           #   type: linux
