--- a/.github/workflows/Create_Release.yml
+++ b/.github/workflows/Create_Release.yml
@@ -28,9 +28,9 @@ jobs:
             arch: x86_64
             flag: osmesa
 
-          - os: Nvidia
-            type: linux
-            arch: arm64
+          #- os: Nvidia
+          #  type: linux
+          #  arch: arm64
 
           # - os: Pi4
           #   type: linux
@@ -39,8 +39,8 @@ jobs:
             type: windows
 
           # ios & osx universal build
-          - os: macOS
-            BuildScheme: PopEngine_Universal  
+         # - os: macOS
+         #  BuildScheme: PopEngine_Universal  
 
           # gr: kept a seperate entry to build the osx app? this target is wrong...
           #- os: macOS
