--- a/.github/workflows/Build_Apple.yml
+++ b/.github/workflows/Build_Apple.yml
@@ -11,25 +11,20 @@ on:
 jobs:
   Test:
     name: Universal
-    runs-on: macOS
+    runs-on: macos-latest
 
     steps:
       - uses: actions/checkout@v2
         with:
           submodules: "recursive"
 
-      - name: Configure Node
-        uses: actions/setup-node@v1
+      - name: "Import Apple-Distriubution NewChromantics Signing Certificate"
+        if: matrix.config.os == 'macos-latest'
+        uses: devbotsxyz/xcode-import-certificate@master
         with:
-          registry-url: https://npm.pkg.github.com/
-          scope: '@newchromantics'
-          node-version: 12
-
-      - name: Install Github Packages
-        working-directory: ${{ env.project }}.Package/
-        run: npm i
-        env:
-          NODE_AUTH_TOKEN: ${{ env.AUTH_TOKEN }}
+          certificate-data: ${{ secrets.APPLE_DIST_NEWCHROMANTICS_P12 }}
+          certificate-passphrase: ${{ secrets.APPLE_DIST_NEWCHROMANTICS_PASSWORD }}
+          keychain-password: "Hello"
 
       - uses: NewChromantics/PopAction_BuildApple@v1.0.9
         with:
